--- a/GESTOR_TAREAS_V1/frontend/indexQuique.html
+++ b/GESTOR_TAREAS_V1/frontend/indexQuique.html
@@ -6,13 +6,11 @@
 </head>
 <body>
 
-    <h2>Crear tarea</h2>
+    <h2>Listado de tareas</h2>
 
-    <input type="text" id="taskName" placeholder="Nombre de la tarea">
-    <button onclick="createTask()">Crear</button>
-
-    <h3>Listado de tareas</h3>
-    <ul id="taskList"></ul>
+    <ul id="taskList">
+        <!-- Aquí se insertan las tareas -->
+    </ul>
 
     <script src="scriptQuique.js"></script>
 </body>
