--- a/GESTOR_TAREAS_V1/frontend/indexQuique.html
+++ b/GESTOR_TAREAS_V1/frontend/indexQuique.html
@@ -1,139 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Gestor de Tareas</title>
-
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f4f6f8;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 700px;
-            margin: 40px auto;
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2, h3 {
-            text-align: center;
-            color: #333;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 15px;
-            color: #555;
-            font-weight: bold;
-        }
-
-        input, select {
-            width: 100%;
-            padding: 8px;
-            margin-top: 6px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            font-size: 14px;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        hr {
-            margin: 30px 0;
-            border: none;
-            border-top: 1px solid #ddd;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        li {
-            background-color: #f9f9f9;
-            padding: 12px;
-            margin-bottom: 10px;
-            border-radius: 4px;
-            border-left: 5px solid #007bff;
-            font-size: 15px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kanban Pro</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-    <div class="container">
-        <h2>Crear tarea</h2>
+<!-- ENCABEZADO NUEVA TAREA -->
+<div class="form-header">
+    <h2 class="form-title">NUEVA TAREA</h2>
+</div>
 
-        <label>
-            Nombre de la tarea
-            <input type="text" id="nombre">
-        </label>
+<!-- FORMULARIO -->
+<div class="form-card">
+    <div class="form-row">
 
-        <label>
-            Descripción
-            <input type="text" id="descripcion">
-        </label>
+        <div class="form-group">
+            <label class="form-label">Nombre de la tarea</label>
+            <input type="text" id="nombre" placeholder="Nombre">
+        </div>
 
-        <label>
-            Dificultad
-            <select id="dificultad">
-                <option value="">-- Selecciona --</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select>
-        </label>
+        <div class="form-group">
+            <label class="form-label">Descripción de la tarea</label>
+            <input type="text" id="descripcion" placeholder="Descripción">
+        </div>
 
-        <label>
-            Asignado a
-            <input type="text" id="asignado">
-        </label>
+        <div class="form-group">
+            <label class="form-label">Dificultad de la tarea</label>
+            <div class="dificultad-container">
+                <button type="button" class="dif-btn" data-value="1">1</button>
+                <button type="button" class="dif-btn" data-value="2">2</button>
+                <button type="button" class="dif-btn" data-value="3">3</button>
+                <button type="button" class="dif-btn" data-value="4">4</button>
+                <button type="button" class="dif-btn" data-value="5">5</button>
+                <button type="button" class="dif-btn" data-value="6">6</button>
+                <button type="button" class="dif-btn" data-value="7">7</button>
+                <button type="button" class="dif-btn" data-value="8">8</button>
+                <button type="button" class="dif-btn" data-value="9">9</button>
+                <button type="button" class="dif-btn" data-value="10">10</button>
+            </div>
+        </div>
 
-        <label>
-            Estado
+        <div class="form-group">
+            <label class="form-label">Asignado a la tarea</label>
+            <input type="text" id="asignado" placeholder="Asignado">
+        </div>
+
+        <div class="form-group">
+            <label class="form-label">Estado de la tarea</label>
             <select id="estado">
                 <option value="TO DO">TO DO</option>
                 <option value="IN PROGRESS">IN PROGRESS</option>
                 <option value="DONE">DONE</option>
             </select>
-        </label>
+        </div>
 
-        <button onclick="crearTarea()">Crear</button>
+        <div class="form-group">
+            <label class="form-label">&nbsp;</label>
+            <button type="button" id="btn-crear">Añadir</button>
+        </div>
 
-        <hr>
-
-        <h3>Listado de Tareas</h3>
-        <ul id="listaTareas"></ul>
     </div>
+</div>
 
-    <script src="scriptQuique.js"></script>
+<!-- KANBAN -->
+<main class="kanban-board">
+    <div class="column">
+        <h3>TO DO</h3>
+        <ul id="todoList" class="task-list"></ul>
+    </div>
+    <div class="column">
+        <h3>IN PROGRESS</h3>
+        <ul id="progressList" class="task-list"></ul>
+    </div>
+    <div class="column">
+        <h3>DONE</h3>
+        <ul id="doneList" class="task-list"></ul>
+    </div>
+</main>
+
+<script src="script.js"></script>
 </body>
 </html>
