--- a/GESTOR_TAREAS_V1/frontend/indexQ.html
+++ b/GESTOR_TAREAS_V1/frontend/indexQ.html
@@ -24,10 +24,7 @@
             background: #343a40; color: white; margin: -15px -15px 15px; padding: 10px 15px; border-radius: 8px 8px 0 0; pointer-events: none; 
         }
         
-        /* Estilo para el contador de dificultad */
-        .difficulty-counter {
-            background: #6c757d; font-size: 0.75em; padding: 2px 8px; border-radius: 20px; font-weight: normal;
-        }
+        .difficulty-counter { background: #6c757d; font-size: 0.75em; padding: 2px 8px; border-radius: 20px; font-weight: normal; }
 
         .task-list { min-height: 450px; } 
 
@@ -45,6 +42,7 @@
         .edit-btn { right: 38px; background: #007bff; }
         
         .badge { background: #e9ecef; padding: 3px 8px; border-radius: 10px; font-size: 0.7em; font-weight: bold; margin-right: 5px; }
+        .badge-priority { background: #fff3cd; color: #856404; border: 1px solid #ffeeba; }
 
         .modal { display: none; position: fixed; z-index: 100; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); align-items: center; justify-content: center; }
         .modal-content { background: white; padding: 20px; border-radius: 10px; width: 350px; }
